general clean-up of admin.js code

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1746,6 +1746,7 @@ table.profile-audit-log TH,
   z-index: 99999;
   color: #444;
   margin: auto;
+  background: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
