--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -420,12 +420,12 @@ h4.detail-title {
   margin: 2em 0;
   min-height: 20vh;
 }
-.terms-container {    
-  border-style:ridge;   
-  max-height: 250px;    
-  overflow: auto;   
-  padding: 1em;   
-  background-color:#F5F5F5;   
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
 }
 #termsText.agreed {
   display: block;
@@ -1466,8 +1466,8 @@ h4.detail-title {
 #mainDiv.profile .profile-item-container .view-container td {
   padding: 0.6em 1.5em 0.6em 0;
 }
-#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {    
-  padding: 0.6em 1em 0 1em;   
+#mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
+  padding: 0.6em 1em 0 1em;
 }
 #mainDiv.profile .profile-item-container .view-container td:first-of-type {
   display: inline-block;
@@ -1522,8 +1522,8 @@ h4.detail-title {
   max-width: 100%;
   padding: 1em 0;
 }
-.deceased-date-container {    
-  margin-top:-8px   
+.deceased-date-container {
+  margin-top:-8px
 }
 .communication-prompt {
   margin-bottom: 1em;
@@ -1901,6 +1901,7 @@ div.noOrg-container {
   z-index: 99999;
   color: #444;
   margin: auto;
+  background: transparent;
 }
 #loadingIndicator:before {
   content: ' ';
@@ -2355,8 +2356,8 @@ div.org-container {
     display: none;
   }
 }
-#tnthproc-submit {    
-  height: 2.9em;    
+#tnthproc-submit {
+  height: 2.9em;
 }
 #eventListtnthproc {
   margin-left: 0.5em;
