--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -760,6 +760,21 @@ h4.detail-title {
   .eproms-id-label {
     display: none
   }
+  div.filterControl select,
+  div.filterControl input
+  {
+    font-weight: normal;
+    min-height: 2.5em;
+  }
+  th.status-field {
+    position: relative;
+  }
+  th.status-field .loading-message-indicator {
+    display: none;
+  }
+  .bootstrap-table-filter-control-status {
+    opacity: 0;
+  }
 }
 #adminTableToolbar {
   div.orglist-selector {
