--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -783,6 +783,26 @@ div.right-panel {
   .truenth-id-label {
     display: none;
   }
+  div.filterControl select,
+  div.filterControl input
+  {
+    font-weight: normal;
+    min-height: 2.5em;
+  }
+  th.status-field {
+    position: relative;
+  }
+  th.status-field .loading-message-indicator {
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    display: none;
+    opacity: 0.6;
+    font-size: 0.85em;
+  }
+  .bootstrap-table-filter-control-status {
+    opacity: 0;
+  }
 }
 .truenth-id-label {
    display: none;
