--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -89,6 +89,7 @@
              data-smart-display="true"
              data-unique-id="id"
              data-id-field="id"
+             data-filter-control="true"
              >
           <thead>
               <tr>
@@ -96,16 +97,16 @@
                   <!-- NOTE TrueNTH has requested its unique ID label, therefore use CSS class to hide/show label appropriately here, please see portal.css and eproms.css for details -->
                   <th data-field="userid"  data-sortable="true" data-sorter="tnthTables.stripLinksSorter" data-class="id-field"><span class="truenth-id-label">{{_("TrueNTH ID")}}</span><span class="eproms-id-label">{{ _("ID") }}</span></th>
                   <th data-field="username" data-sortable="true" data-visible="false">{{ _("Username") }}</th>
-                  <th data-field="firstname" data-sortable="true" data-class="firstname-field">{{ _("First Name") }}</th>
-                  <th data-field="lastname" data-sortable="true" data-class="lastname-field">{{ _("Last Name") }}</th>
-                  <th data-field="email" data-sortable="true" data-class="email-field">{{ _("Email") }}</th>
-                  <th data-field="phone" data-sortable="true" data-visible="false" data-width="10%" data-class="phone-field">{{ _("Cell") }}</th>
-                  <th data-field="altPhone" data-sortable="true" data-visible="false" data-width="10%" data-class="altPhone-field">{{ _("Phone (Other)") }}</th>
-                  {% if 'reports' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="staff_html" data-sortable="true" data-class="reports-field text-center">{{ _("Reports") }}</th>{% endif %}
-                  {% if 'status' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="status" data-sortable="true" data-card-visible="false" data-searchable="true" data-width="5%" data-class="status-field">{{ _("Questionnaire Status") }}</th>{% endif %}
-                  {% if 'study_id' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="study_id" data-sortable="true" data-searchable="true" data-class="study-id-field">{{ _("Study ID") }}</th>{% endif %}
-                  <th data-field="consentdate" data-sortable="true" data-card-visible="false" data-searchable="true" data-class="consentdate-field text-center">{{_("Consent Date (GMT)")}}</th>
-                  <th data-field="organization" data-sortable="true" data-class="organization-field">{{ _("Site(s)") }}</th>
+                  <th data-field="firstname" data-sortable="true" data-class="firstname-field" data-filter-control="input">{{ _("First Name") }}</th>
+                  <th data-field="lastname" data-sortable="true" data-class="lastname-field" data-filter-control="input">{{ _("Last Name") }}</th>
+                  <th data-field="email" data-sortable="true" data-class="email-field" data-filter-control="input">{{ _("Email") }}</th>
+                  <th data-field="phone" data-sortable="true" data-visible="false" data-width="10%" data-class="phone-field" data-filter-control="input">{{ _("Cell") }}</th>
+                  <th data-field="altPhone" data-sortable="true" data-visible="false" data-width="10%" data-class="altPhone-field" data-filter-control="input">{{ _("Phone (Other)") }}</th>
+                  {% if 'reports' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="staff_html" data-sortable="true" data-class="reports-field text-center" data-filter-control="input">{{ _("Reports") }}</th>{% endif %}
+                  {% if 'status' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="status" data-sortable="true" data-card-visible="false" data-searchable="true" data-width="5%" data-class="status-field" data-filter-control="select">{{ _("Questionnaire Status") }}</th>{% endif %}
+                  {% if 'study_id' in config.PATIENT_LIST_ADDL_FIELDS %}<th data-field="study_id" data-sortable="true" data-searchable="true" data-class="study-id-field" data-filter-control="input">{{ _("Study ID") }}</th>{% endif %}
+                  <th data-field="consentdate" data-sortable="true" data-card-visible="false" data-sorter="tnthTables.dateSorter" data-searchable="true" data-class="consentdate-field text-center" data-filter-control="input">{{_("Consent Date (GMT)")}}</th>
+                  <th data-field="organization" data-sortable="true" data-class="organization-field" data-filter-control="select">{{ _("Site(s)") }}</th>
               </tr>
           </thead>
           <tbody id="admin-table-body" data-link="row" class="rowlink">
@@ -128,7 +129,6 @@
                       {% endif %}
                       <td>{%- if patient.valid_consents -%}
                         {%-for consent in patient.valid_consents -%}
-                          <span class="tnth-hide">{{consent.audit.timestamp}}</span>
                           {{consent.audit.timestamp.strftime('%-d %b %Y')}}<br/>
                         {%-endfor-%}
                       {%-endif-%}
@@ -177,7 +177,25 @@ $(document).ready(function() {
           window.location = $("#createUserLink").attr("href");
         }, true);
     });
+    /*
+     * appending loading indicator for status column at runtime
+     */
+    $("#adminTable th.status-field").prepend(__getLoaderHTML('{{_("retrieving data ...")}}'));
   {% endif %}
+
+  /*
+   * add placeholder text for filter controls
+   */
+   (function() {
+     function addFilterPlaceHolders() {
+       $("#adminTable .filterControl input").attr("placeholder", "Select");
+       $("#adminTable .filterControl select option[value='']").text("Select");
+     }
+     $("#adminTable").on("reset-view.bs.table", function() {
+        addFilterPlaceHolders();
+     });
+     addFilterPlaceHolders();
+   })();
 
   /*
    * fade loading spinner on page load
@@ -202,7 +220,7 @@ $(document).ready(function() {
   $("input[data-field='id']:checkbox").hide();
 
   /*
-   * attach on click even to submit button in the download modal
+   * attach on click event to submit button in the download modal
    */
   $(document).delegate("#patientsDownloadButton", "click", function(event){
     var instruments = "", dataType = "";
