--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -94,6 +94,9 @@
                             {% if user and (user.has_role(ROLE.ADMIN) or user.has_role(ROLE.ANALYST)) %}
                             <li><a href="{{PORTAL}}/reporting">{{ _("Reporting Dashboard") }}</a></li>
                             {% endif %}
+                            {% if user and user.has_role(ROLE.RESEARCHER) %}
+                            <li><a href="{{PORTAL}}/research">{{ _("Research Dashboard") }}</a></li>
+                            {% endif %}
                             <li><a href="{{PORTAL}}/logout">{{ _("Log Out of TrueNTH") }}</a></li>
                         </ul>
                         {% endif %}
