--- a/portal/templates/research.html
+++ b/portal/templates/research.html
@@ -48,46 +48,18 @@
     </div>
 </div>
 <div id="patientListExportDataContainer" class="btn btn-lg"><a href="#" id="patientAssessmentDownload"  data-toggle="modal" data-target="#dataDownloadModal">{{ _("Export questionnaire data") }} &nbsp;<span class="glyphicon glyphicon-save"></span></a></div>
+<script src="{{ url_for('static', filename='js/admin.js') }}"></script>
 {% endblock %}
 {%- from "flask_user/_macros.html" import footer -%}
 {% block footer %}
 {{footer(user=user)}}
 {% endblock %}
 {% block document_ready %}
-
+var AT = new AdminTool({{user.id if user}});
 $(document).ready(function() {
-
-  /*
-   * attach on click event to submit button in the download modal
-   */
-  $(document).delegate("#patientsDownloadButton", "click", function(event){
-    var instruments = "", dataType = "";
-    $("input[name='instrument'").each(function() {
-        if ($(this).is(":checked")) {
-          instruments += (instruments != "" ? "&": "") + "instrument_id="+$(this).val();
-        };
-    });
-    $("input[name='downloadType']").each(function() {
-        if ($(this).is(":checked")) dataType = $(this).val();
-    });
-    if (instruments != "" && dataType != "") {
-        //alert(instruments)
-        $("#_downloadMessage").text("");
-        $("#_downloadLink").attr("href", "/api/patient/assessment?" + instruments + "&format=" + dataType);
-        $("#_downloadLink")[0].click();
-    } else {
-        message = (instruments == "" ? "{{_('Please choose at least one instrument.')}}": "");
-        if (dataType == "") message += (message != "" ? "<br/>": "") + "{{_('Please choose one download type.')}}";
-        $("#_downloadMessage").html(message);
-    };
-  });
-
-  /*
-   * attach event to each checkbox in the download instruments modal
-   */
-  $("input[name='instrument'], input[name='downloadType']").on("click", function() {
-      if ($(this).is(":checked")) $("#_downloadMessage").text("");
-  });
+    AT.fadeLoader();
+    AT.initOrgsList();
+    AT.handleDownloadModal();
 });
 
 {% endblock %}
