add consent date field in account creation page for eproms

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -150,6 +150,9 @@ a.btn {
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color:    #999;
 }
+#consentDateEditContainer {
+  display: none;
+}
 .form-control {
   font-size: 16px;
   height: 40px;
