--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -175,6 +175,9 @@ a.btn {
     display: inline-block;
   }
 }
+#consentDateEditContainer {
+  display: none;
+}
 .button--LR.data-show,
 #profileConsentList .button--LR[data-show = 'true'] {
     opacity: 1;
