--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -792,6 +792,7 @@ div.right-panel {
     background-image: linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     letter-spacing: 0.1px;
     border-bottom: 1px solid #dad8d8;
+    font-size: 0.93em;
   }
   .truenth-id-label {
     display: none;
@@ -1874,6 +1875,9 @@ div.noOrg-container {
     top:-1px;
     left: 1px;
   }
+  .btn-tnth-back {
+    background: none;
+  }
 }
 
 #emailInfoText {
@@ -2431,6 +2435,9 @@ div.biopsy-option:last-of-type{
   top:-2px;
 }
 
+#consentDateEditContainer {
+  margin-top: 2.5em;
+}
 #profileConsentList {
   font-size: 0.95em;
   max-width: 100%;
