--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -986,6 +986,7 @@
     <div class="set-consent-error error-message"></div>
     <div class="delete-consent-error error-message"></div>
     <script>
+        var CONSENT_DATE_LABEL = "{{ app_text('consent date label') }}";
         var CONSENT_EDIT_PERMISSIBLE_ROLES = {% if config.CONSENT_EDIT_PERMISSIBLE_ROLES %}{{ config.CONSENT_EDIT_PERMISSIBLE_ROLES|safe }}{% else %}false{% endif %};
         var consentEditable = {% if (current_user.has_role(ROLE.STAFF) and ROLE.STAFF in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or (current_user.has_role(ROLE.PATIENT) and ROLE.PATIENT in config.CONSENT_EDIT_PERMISSIBLE_ROLES) or current_user.has_role(ROLE.ADMIN) %}true{% else %}false{% endif %};
         var isTestPatient = {% if current_user and not current_user.has_role(ROLE.PATIENT) %}'{{config.get("SYSTEM.TYPE")}}'.toUpperCase() != "PRODUCTION"{% else %}false{% endif %};
@@ -1011,7 +1012,41 @@
     </script>
     {% endif %}
 {%- endmacro %}
-
+{% macro profileConsentDate() -%}
+ <div id="consentDateEditContainer">
+    <div class="form-group">
+        <label>{{ app_text('consent date label')}}</label>
+        <input type="hidden" name="consentDate" id="consentDate" value="" />
+        <div class="flex">
+            <div class="flex-item">
+                <input class="form-control" id="consentDay" name="consentDay" placeholder="DD" type="text" pattern="(\d)?\d" maxlength="2" data-error="{{_('Date must be valid and in the required format.')}}" autocomplete="off" required />
+            </div>
+            <div class="flex-item">
+                <select class="form-control" name="consentMonth" id="consentMonth" data-error="{{_('Date must be valid and in the required format.')}}" required>
+                    <option value="">{{ _("Month") }}...</option>
+                    <option value="01">{{ _("January") }}</option>
+                    <option value="02">{{ _("February") }}</option>
+                    <option value="03">{{ _("March") }}</option>
+                    <option value="04">{{ _("April") }}</option>
+                    <option value="05">{{ _("May") }}</option>
+                    <option value="06">{{ _("June") }}</option>
+                    <option value="07">{{ _("July") }}</option>
+                    <option value="08">{{ _("August") }}</option>
+                    <option value="09">{{ _("September") }}</option>
+                    <option value="10">{{ _("October") }}</option>
+                    <option value="11">{{ _("November") }}</option>
+                    <option value="12">{{ _("December") }}</option>
+                </select>
+            </div>
+            <div class="flex-item">
+                <input class="form-control" id="consentYear" name="consentYear" placeholder="YYYY" pattern = "(19|20)\d{2}" type="text" maxlength="4" data-error="{{_('Date must be valid and in the required format.')}}" autocomplete="off" required />
+            </div>
+        </div>
+        <div class="help-block with-errors"></div>
+        <span id="errorConsentDate" class="help-block error-message"></span>
+    </div>
+</div>
+{%- endmacro %}
 {% macro profileAuditLog(person, current_user) -%}
     {% if (person and current_user) and (current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.STAFF)) %}
         <input type="hidden" id="audit_user_id" value="{{person.id}}"/>
@@ -2527,7 +2562,17 @@
                             agreement = stockConsentUrl.replace("placeholder", encodeURIComponent($(this).attr("data-parent-name")));
                         };
                         if (hasValue(agreement)) {
-                            consents.push({"organization_id": consent_org_id, "agreement_url": agreement, "staff_editable": true, "include_in_reports": true, "send_reminders": true});
+                            var ct = $("#consentDate").val();
+                            var consentItem = {};
+                            if (hasValue(ct)) {
+                                consentItem["acceptance_date"] = ct;
+                            };
+                            consentItem["organization_id"] = consent_org_id;
+                            consentItem["agreement_url"] = agreement;
+                            consentItem["staff_editable"] = true;
+                            consentItem["include_in_reports"] = true;
+                            consentItem["send_reminders"] = true;
+                            consents.push(consentItem);
                         };
                     };
                 };
@@ -2562,6 +2607,41 @@
                 $("#email").attr("disabled", false).attr("required", "required").attr("data-customemail", "true");
             };
         });
+        if ($("#consentDateEditContainer").length > 0) {
+            //default consent date to today's date
+            var today = new Date();
+            var td = pad(today.getDate()), tm = pad(today.getMonth()+1), ty = pad(today.getFullYear());
+            $("#consentDay").val(td);
+            $("#consentMonth").val(tm);
+            $("#consentYear").val(ty);
+            //saving the consent date in GMT 12:00 am
+            $("#consentDate").val(tnthDates.formatDateString(tnthDates.getDateObj(ty, tm, td), "iso-short") + "T12:00:00");
+            if (_isTouchDevice()) {
+                $("#consentDay, #consentYear").each(function() {
+                    $(this).attr("type", "tel");
+                });
+            };
+            $("#consentDay, #consentMonth, #consentYear").each(function() {
+              $(this).on("change", function() {
+                  var d = $("#consentDay");
+                  var m = $("#consentMonth");
+                  var y = $("#consentYear");
+                  if (d.val() != "" && m.val() != "" && y.val() != "") {
+                      if (this.validity.valid) {
+                          var isValid = tnthDates.validateDateInputFields(m.val(), d.val(), y.val(), "errorConsentDate");
+                          if (isValid) {
+                            $("#consentDate").val(tnthDates.formatDateString(tnthDates.getDateObj(y.val(),m.val(),d.val()), "iso-short") + "T12:00:00");
+                            $("#errorConsentDate").text("").hide();
+                            //success
+                          } else {
+                             //fail
+                            $("#consentDate").val("");
+                          };
+                      };
+                  };
+              });
+            });
+        };
         $('#createProfileForm').validator().on('submit', function (e) {
             if (e.isDefaultPrevented()) {
                 // handle the invalid form...
