add conversion to UTC date/time for consent date

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -2604,15 +2604,31 @@
                 $("#email").attr("disabled", false).attr("required", "required").attr("data-customemail", "true");
             };
         });
+
+        function getDateWithTimeZone(dObj) {
+            /*
+             * param is a date object
+             * calculating UTC date using Date object's timezoneOffset method
+             * the method return offset in minutes, so need to convert it to miliseconds
+             * adding the resulting offset will be the UTC date/time
+             */
+            var utcDate = new Date(dObj.getTime()+(dObj.getTimezoneOffset())*60*1000);
+            //I believe this is a valid python date format, will save it as GMT date/time
+            //NOTE, conversion already occurred, so there will be no need for backend to convert it again
+            return tnthDates.formatDateString(utcDate, "yyyy-mm-dd hh:mm:ss");
+        }
+
         if ($("#consentDateEditContainer").length > 0) {
             //default consent date to today's date
             var today = new Date();
             var td = pad(today.getDate()), tm = pad(today.getMonth()+1), ty = pad(today.getFullYear());
+            var th = today.getHours(), tmi = today.getMinutes(), ts = today.getSeconds();
             $("#consentDay").val(td);
             $("#consentMonth").val(tm);
             $("#consentYear").val(ty);
-            //saving the consent date in GMT 12:00 am
-            $("#consentDate").val(tnthDates.formatDateString(tnthDates.getDateObj(ty, tm, td), "iso-short") + "T12:00:00");
+            //saving the consent date in GMT
+            //default to today's date
+            $("#consentDate").val(getDateWithTimeZone(tnthDates.getDateObj(ty, tm, td, th, tmi, ts)));
             if (_isTouchDevice()) {
                 $("#consentDay, #consentYear").each(function() {
                     $(this).attr("type", "tel");
@@ -2627,7 +2643,9 @@
                       if (this.validity.valid) {
                           var isValid = tnthDates.validateDateInputFields(m.val(), d.val(), y.val(), "errorConsentDate");
                           if (isValid) {
-                            $("#consentDate").val(tnthDates.formatDateString(tnthDates.getDateObj(y.val(),m.val(),d.val()), "iso-short") + "T12:00:00");
+                            var timezoneOffset = Math.floor(((new Date()).getTimezoneOffset())/60);
+                            //saving the time at 12
+                            $("#consentDate").val(getDateWithTimeZone(tnthDates.getDateObj(y.val(),m.val(),d.val(),12,0,0)));
                             $("#errorConsentDate").text("").hide();
                             //success
                           } else {
