add export functionality to patients list

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -90,6 +90,7 @@
              data-unique-id="id"
              data-id-field="id"
              data-filter-control="true"
+             data-show-export="true"
              >
           <thead>
               <tr>
