--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -417,6 +417,9 @@ h4.detail-title {
   margin: 2em 0;
   min-height: 20vh;
 }
+.hide-terms {
+  display: none;
+}
 #topTerms.hide-terms ~ #aboutForm {
   margin: 3em auto;
   min-height: 50vh;
@@ -432,8 +435,13 @@ h4.detail-title {
   font-family: "akzidenz_grotesk_medium", Arial, "Helvetica Neue", Helvetica, sans-serif;
   width: 100%;
   min-height: 30vh;
-  margin-top: 11%;
+  margin-top: 20%;
   display: none;
+}
+@media (min-width: 500px) {
+  #aboutForm .iq-container {
+    margin-top: 11%;
+  }
 }
 #aboutForm .iq-container .tnth-headline:first-of-type {
   margin-bottom: 1.5em;
@@ -1288,7 +1296,7 @@ h4.detail-title {
   top: 2.5em;
   right: 3em;
   margin-right: 1em;
-  z-index: 200;
+  z-index: 10;
   height: 2.5em;
   width: 70px;
   padding: 0 0.7em;
@@ -1328,12 +1336,14 @@ h4.detail-title {
 }
 .profile-item-container .view-container {
   display: none;
+  max-width: 100%;
 }
 #mainDiv.profile .profile-item-container.edit .profile-item-edit-btn::before {
   content: "DONE";
 }
 #mainDiv.profile .profile-item-container .edit-container {
   display: none;
+  max-width: 100%;
 }
 #mainDiv.profile .profile-item-container.edit .edit-container {
   display: inline-block;
@@ -2228,6 +2238,10 @@ div.timezone-warning.text-warning {
   }
 }
 @media (max-width: 506px) {
+  #aboutForm .bd-element,
+  #aboutForm .biopsy-date-element {
+    margin: 0.5em 0;
+  }
   div.admin-table div.pull-right {
     width: 100%;
     max-width: 100%;
@@ -2236,6 +2250,10 @@ div.timezone-warning.text-warning {
   div.admin-table div.pull-right.search {
     width: 50%;
     float: left !important;
+    max-width: 100%;
+  }
+  #consentListTable {
+    font-size: 0.7em;
     max-width: 100%;
   }
 }
@@ -2253,6 +2271,10 @@ div.timezone-warning.text-warning {
   legend,
   .tnth-form .form-group > label {
     font-size: 13px;
+  }
+  .tnth-headline,
+  .tnth-subhead {
+    font-size: 1em;
   }
   div.right-panel {
     margin-left: 0 !important;
@@ -2289,6 +2311,9 @@ div.timezone-warning.text-warning {
     padding: 2em;
     max-width: 100%;
   }
+  #mainDiv.profile .profile-item-title {
+    max-width: 150px;
+  }
   .fixed-table-pagination {
     font-size: 0.9em;
   }
@@ -2324,9 +2349,10 @@ div.timezone-warning.text-warning {
     top: -2px;
   }
   .create-account-container {
-    padding: 3.5em 3em;
+    padding: 1em 2em;
     width: 100%;
     max-width: 100%;
+    overflow: hidden;
   }
   #identityVerificationContainer {
     width: 100%;
@@ -2404,6 +2430,14 @@ div.timezone-warning.text-warning {
   }
   .timezone-container {
     padding-bottom: 0;
+  }
+  #consentContainer .radio-inline input {
+    position: relative;
+    top: 1px;
+    left: -1px;
+  }
+  #aboutForm {
+    overflow: hidden;
   }
 }
 @media (max-width: 730px) {
