--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -420,6 +420,9 @@ h4.detail-title {
   margin: 2em 0;
   min-height: 20vh;
 }
+.hide-terms {
+  display: none;
+}
 .terms-container {
   border-style:ridge;
   max-height: 250px;
@@ -489,7 +492,7 @@ h4.detail-title {
     font-family: "akzidenz_grotesk_medium", Arial, "Helvetica Neue", Helvetica, sans-serif;
     width: 100%;
     min-height: 30vh;
-    margin-top: 11%;
+    margin-top: 20%;
     display: none;
   }
   .iq-container .tnth-headline:first-of-type {
@@ -599,6 +602,11 @@ h4.detail-title {
     border-top: 1px solid rgba(203, 210, 217, 0.2);
     border-left: 1px solid rgba(203, 210, 217, 0.2);
     font-size: 1.2em;
+  }
+}
+@media (min-width: 500px) {
+  #aboutForm .iq-container {
+    margin-top: 11%;
   }
 }
 @media (min-width: 992px) {
@@ -1420,7 +1428,7 @@ h4.detail-title {
   top: 2.5em;
   right: 3em;
   margin-right: 1em;
-  z-index: 200;
+  z-index: 10;
   height: 2.5em;
   width: 70px;
   padding: 0 0.7em;
@@ -1453,9 +1461,11 @@ h4.detail-title {
 }
 .profile-item-container .view-container {
   display: none;
+  max-width: 100%;
 }
 #mainDiv.profile .profile-item-container .edit-container {
   display: none;
+  max-width: 100%;
 }
 #mainDiv.profile .profile-item-container.edit .edit-container {
   display: inline-block;
@@ -2412,6 +2422,10 @@ div.timezone-warning.text-warning {
 }
 
 @media (max-width: 506px) {
+   #aboutForm .bd-element,
+   #aboutForm .biopsy-date-element {
+     margin: 0.5em 0;
+   }
    div.admin-table div.pull-right {
      width: 100%;
      max-width: 100%;
@@ -2422,6 +2436,10 @@ div.timezone-warning.text-warning {
      float: left !important;
      max-width: 100%;
    }
+   #consentListTable {
+    font-size: 0.7em;
+    max-width: 100%;
+  }
  }
 
 @media (max-width: 640px) {
@@ -2434,6 +2452,10 @@ div.timezone-warning.text-warning {
   legend,
   .tnth-form .form-group > label {
     font-size: 13px;
+  }
+  .tnth-headline,
+  .tnth-subhead {
+    font-size: 1em;
   }
   div.right-panel {
     margin-left: 0 !important;
@@ -2469,6 +2491,9 @@ div.timezone-warning.text-warning {
 
   #wellContainer .btn {
   font-size: 0.9em;
+  }
+  #mainDiv.profile .profile-item-title {
+    max-width: 150px;
   }
   .profile-item-container {
      padding: 2em;
@@ -2514,9 +2539,10 @@ div.timezone-warning.text-warning {
     top: -2px;
   }
   .create-account-container {
-    padding: 3.5em 3em;
+    padding: 1em 2em;
     width: 100%;
     max-width: 100%;
+    overflow: hidden;
   }
 
   #identityVerificationContainer {
@@ -2601,6 +2627,14 @@ div.timezone-warning.text-warning {
   }
   .timezone-container {
     padding-bottom: 0;
+  }
+  #consentContainer .radio-inline input {
+    position: relative;
+    top: 1px;
+    left: -1px;
+  }
+  #aboutForm {
+    overflow: hidden;
   }
 
 }
