--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -166,14 +166,14 @@
   {%- endmacro %}
   {% macro nameGroup() -%}
     <div class="row" id="nameGroup">
-        <div class="col-md-5 col-xs-6">
+        <div class="col-md-5 col-xs-8">
           <div class="form-group float-input-label">
             <label>Name</label>
             <input class="form-control float-text init-queries-field" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" type="text" required="required" data-error="{{ _('First name is required') }}"  />
             <div class="help-block with-errors"></div>
           </div>
         </div>
-        <div class="col-md-5 col-xs-6">
+        <div class="col-md-5 col-xs-8">
           <div class="form-group float-input-label">
             <label>&nbsp;</label>
             <input class="form-control float-text init-queries-field" id="lastname" name="lastname" placeholder="{{ _('Last Name') }}" type="text" required="required" data-error="{{ _('Last name is required') }}" />
@@ -218,10 +218,10 @@
           <div class="form-group">
             <label>{{ _("Birth Date") }} <span class="bd-optional text-muted">{{_("(optional)")}}</span></label>
             <div class="row">
-              <div class="col-md-4 col-xs-4">
+              <div class="col-md-4 col-xs-8">
                 <input class="form-control bd-element init-queries-field" id="date" name="birthdayDate" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The birth day field is required and must be valid format')}}" required />
               </div>
-              <div class="col-md-4 col-xs-4">
+              <div class="col-md-4 col-xs-8">
                 <select data-type="select" class="form-control bd-element init-queries-field" name="birthdayMonth" id="month" data-error="{{_('A birth month must be selected')}}" required>
                   <option value="">{{ _("Month") }}...</option>
                   <option value="01">{{ _("January") }}</option>
@@ -238,7 +238,7 @@
                   <option value="12">{{ _("December") }}</option>
                 </select>
               </div>
-              <div class="col-md-4 col-xs-4">
+              <div class="col-md-4 col-xs-8">
                 <input class="form-control bd-element init-queries-field" id="year" name="birthdayYear" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-error="{{_('The birth year is required and must be in valid format')}}" required />
               </div>
             </div>
@@ -246,6 +246,11 @@
             <span id="errorbirthday" class="help-block tnth-hide custom-error" style="margin-top: 1em; padding-left: 1em; color: #a94442"></span>
         </div>
       </div>
+      <script>
+      $(function() {
+        __convertToNumericField($("#date, #year"));
+      });
+      </script>
   {%- endmacro %}
   {% macro patientQGroup(user) -%}
     <div id="patientQ">
@@ -262,10 +267,10 @@
             	<label for="biopsyDate">{{_("Biopsy Date")}}:</label>
             	<input id="biopsyDate" type="hidden" data-name="biopsy" class="form-control" value="">
               <div class="row">
-                <div class="col-md-3 col-xs-4">
+                <div class="col-md-3 col-xs-8">
                   <input class="form-control biopsy-date-element init-queries-field" id="biopsy_day" name="biopsy_day" placeholder="DD" type="text" maxlength="2" pattern="\d[\d]?" data-error="{{_('The biopsy day field is required and must be valid format')}}" required />
                 </div>
-                <div class="col-md-3 col-xs-6">
+                <div class="col-md-3 col-xs-8">
                   <select data-type="select" class="form-control biopsy-date-element init-queries-field" id="biopsy_month" name="biopsy_month" data-error="{{_('A biopsy month must be selected')}}" required>
                     <option value="">{{ _("Month") }}...</option>
                     <option value="01">{{ _("January") }}</option>
@@ -282,8 +287,8 @@
                     <option value="12">{{ _("December") }}</option>
                   </select>
                 </div>
-                <div class="col-md-3 col-xs-6">
-                  <input class="form-control biopsy-element init-queries-field" id="biopsy_year" name="biopsy_year" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-error="{{_('The biopsy year is required and must be in valid format')}}" required />
+                <div class="col-md-3 col-xs-8">
+                  <input class="form-control biopsy-date-element init-queries-field" id="biopsy_year" name="biopsy_year" placeholder="YYYY" type="text" maxlength="4" pattern = "(19|20)\d{2}" data-error="{{_('The biopsy year is required and must be in valid format')}}" required />
                 </div>
               </div>
               <div class="help-block with-errors"></div>
@@ -368,6 +373,7 @@
       </div>
       <script>
         $(function () {
+          __convertToNumericField($("#biopsy_day, #biopsy_year"));
           tnthAjax.getClinical($("#iq_userId").val());
           tnthAjax.getTreatment($("#iq_userId").val());
           $("input[name='biopsy']").each(function() {
