add export button to patients table

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -89,6 +89,7 @@
              data-smart-display="true"
              data-unique-id="id"
              data-id-field="id"
+             data-show-export="true"
              >
           <thead>
               <tr>
