--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -189,7 +189,7 @@ $(document).ready(function() {
    */
    (function() {
      function addFilterPlaceHolders() {
-       $("#adminTable .filterControl input").attr("placeholder", "Select");
+       $("#adminTable .filterControl input").attr("placeholder", "Enter Text");
        $("#adminTable .filterControl select option[value='']").text("Select");
      }
      $("#adminTable").on("reset-view.bs.table", function() {
