--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2822,11 +2822,13 @@ div.timezone-warning.text-warning {
     top: 1px;
     left: -1px;
   }
-  #aboutForm {
-    overflow: hidden;
-  }
   .org-container .org-label {
     font-size: 0.9em;
+  }
+  
+  #aboutForm .iq-container .tnth-headline:first-of-type{
+    margin-left: 0.3em;
+    margin-right: 0.3em;
   }
 
 }
@@ -2947,6 +2949,9 @@ div.timezone-warning.text-warning {
   }
   #profileStudyIDContainer {
     margin-top: -1.5em;
+  }
+  #aboutForm .bd-element {
+    margin-bottom: 1em;
   }
 }
 @media (min-width: 992px) {
