--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -2616,8 +2616,9 @@ div.timezone-warning.text-warning {
     top: 1px;
     left: -1px;
   }
-  #aboutForm {
-    overflow: hidden;
+  #aboutForm .iq-container .tnth-headline:first-of-type{
+    margin-left: 0.3em;
+    margin-right: 0.3em;
   }
   .org-container .org-label {
     font-size: 0.9em;
@@ -2742,6 +2743,9 @@ div.timezone-warning.text-warning {
   }
   #profileStudyIDContainer {
     margin-top: -1.5em;
+  }
+  #aboutForm .bd-element {
+    margin-bottom: 1em;
   }
 }
 @media (min-width: 992px) {
