--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -2651,10 +2651,10 @@ div.timezone-warning.text-warning {
     top: 1px;
     left: -1px;
   }
-  #aboutForm {
-    overflow: hidden;
+  #aboutForm .iq-container .tnth-headline:first-of-type{
+    margin-left: 0.3em;
+    margin-right: 0.3em;
   }
-
 }
 @media (max-width: 730px) {
   #userSessionsList {
@@ -2769,6 +2769,9 @@ div.timezone-warning.text-warning {
   }
   .one-side {
     height: 23em;
+  }
+  #aboutForm .bd-element {
+    margin-bottom: 1em;
   }
 }
 /*NOTE, the placement, overriding the previous media query match for this class*/
