add i18next config js file, allow options for i18next configuration

--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/extensions/export/bootstrap-table-export.js"></script>
     <script src="{{ url_for('static', filename='js/bootstrap-table-filter-control.js') }}"></script>
     <script src="{{ url_for('static', filename='js/i18next.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
 </head>
 {# sets container to full-width #}
 {%- set splashView = false -%}
@@ -129,6 +130,7 @@ var __CRSF_TOKEN = "{{csrf_token()}}";
 var __CRSF_TOKEN_HEADER = {
     "X-CSRFToken": __CRSF_TOKEN
 };
+var __ENV = {% if config.SYSTEM_TYPE %}"{{config.SYSTEM_TYPE}}"{% else %}""{% endif %};
 {% block document_ready -%}
 $(document).ready(function(){
    $('[data-toggle="popover"]').popover();
