--- a/portal/templates/clients_list.html
+++ b/portal/templates/clients_list.html
@@ -41,7 +41,7 @@
         {% endfor %}
     </ul>
     {% else %}
-    <p>{{ _("You have not created an client applications.") }}</p>
+    <p>{{ _("You have not created any client applications.") }}</p>
     {% endif %}
 
 
