--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1646,6 +1646,7 @@ div.right-panel {
 .profile-item-container .view-container {
   display: none;
   max-width: 100%;
+  word-break: break-word;
 }
 #mainDiv.profile .profile-item-container .view-container {
   display: block;
@@ -2662,11 +2663,6 @@ div.timezone-warning.text-warning {
   .tnth-subhead {
     font-size: 1em;
   }
-  #createUserLink,
-  .btn,
-  .btn-tnth-primary {
-    font-size: 0.95em;
-  }
   /************
   div.right-panel {
     margin-left: 0 !important;
@@ -2701,9 +2697,14 @@ div.timezone-warning.text-warning {
     padding: 1em;
     max-width: 100%;
   }
-  #mainDiv.profile .profile-item-title {
+  #mainDiv.profile .profile-item-container .profile-item-title {
     max-width: 150px;
   }
+
+  #mainDiv.profile .profile-item-container .view-container {
+    padding-bottom: 1em;
+   }
+
   .fixed-table-pagination {
     font-size:@smallText;
   }
