--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1480,6 +1480,7 @@ h4.detail-title {
 .profile-item-container .view-container {
   display: none;
   max-width: 100%;
+  word-break: break-word;
 }
 #mainDiv.profile .profile-item-container .edit-container {
   display: none;
@@ -2478,9 +2479,6 @@ div.timezone-warning.text-warning {
   div.right-panel {
     margin-left: 0 !important;
   }
-  #createUserLink {
-    font-size: @smallText;
-  }
 
   #backLink a {
    position: relative;
@@ -2510,14 +2508,16 @@ div.timezone-warning.text-warning {
   #wellContainer .btn {
   font-size: 0.9em;
   }
-  #mainDiv.profile .profile-item-title {
+  #mainDiv.profile  .profile-item-container .profile-item-title {
     max-width: 150px;
   }
   .profile-item-container {
      padding: 2em;
      max-width: 100%;
   }
-
+  #mainDiv.profile .profile-item-container .view-container {
+   padding-bottom: 1em;
+  }
   .fixed-table-pagination {
     font-size:@smallText;
   }
